--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
 
     <nav class="navbar navbar-expand-lg bg-success position-fixed">
         <div class="container-fluid">
-          <a class="navbar-brand text-white" href="#">Navbar</a>
+          <a class="navbar-brand text-white" href="#">Book Read</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <!-- <span class="navbar-toggler-icon"></span>
-             -->
+            
              <i class="fa-solid fa-bars"></i>
 
           </button>
@@ -62,6 +61,64 @@
               </div>
           </div>
       </div>
+
+
+
+      <!-- slider img  -->
+      <!-- Slideshow container -->
+      <div class="slideshow-container">
+
+        <!-- Full-width images with number and caption text -->
+        <div class="mySlides ">
+          <div class="numbertext">1 / 3</div>
+          <img src="./img/s1.png" style="width:100%">
+          <div class="text">Caption Text</div>
+        </div>
+
+        <div class="mySlides ">
+          <div class="numbertext">2 / 3</div>
+          <img src="/img/s3.png" style="width:100%">
+          <div class="text">Caption Two</div>
+        </div>
+
+        <div class="mySlides ">
+          <div class="numbertext">3 / 3</div>
+          <img src="/img/s5.png" style="width:100%">
+          <div class="text">Caption Three</div>
+        </div>
+
+        <div class="mySlides ">
+          <div class="numbertext">3 / 3</div>
+          <img src="/img/s2.png" style="width:100%">
+          <div class="text">Caption Three</div>
+        </div>
+
+        <div class="mySlides ">
+          <div class="numbertext">3 / 3</div>
+          <img src="/img/s6.png" style="width:100%">
+          <div class="text">Caption Three</div>
+        </div>
+
+        <div class="mySlides ">
+          <div class="numbertext">3 / 3</div>
+          <img src="/img/s4.png" style="width:100%">
+          <div class="text">Caption Three</div>
+        </div>
+
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <br>
+
+      <!-- The dots/circles -->
+      <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+      </div>
+
+
 
 
       <div class=" blog row"></div>
