--- a/index.html
+++ b/index.html
@@ -30,11 +30,9 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                <a class="nav-link text-white" aria-current="page" href="#">Home</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="#">Books</a>
-              </li>
+              
               <li class="nav-item">
                 <a class="nav-link text-white"  href="#">Link</a>
               </li>
@@ -72,37 +70,31 @@
         <div class="mySlides ">
           <div class="numbertext">1 / 3</div>
           <img src="./img/s1.png" style="width:100%">
-          <div class="text">Caption Text</div>
         </div>
 
         <div class="mySlides ">
           <div class="numbertext">2 / 3</div>
           <img src="/img/s3.png" style="width:100%">
-          <div class="text">Caption Two</div>
         </div>
 
         <div class="mySlides ">
           <div class="numbertext">3 / 3</div>
           <img src="/img/s5.png" style="width:100%">
-          <div class="text">Caption Three</div>
         </div>
 
         <div class="mySlides ">
           <div class="numbertext">3 / 3</div>
           <img src="/img/s2.png" style="width:100%">
-          <div class="text">Caption Three</div>
         </div>
 
         <div class="mySlides ">
           <div class="numbertext">3 / 3</div>
           <img src="/img/s6.png" style="width:100%">
-          <div class="text">Caption Three</div>
         </div>
 
         <div class="mySlides ">
           <div class="numbertext">3 / 3</div>
           <img src="/img/s4.png" style="width:100%">
-          <div class="text">Caption Three</div>
         </div>
 
         <!-- Next and previous buttons -->
