--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
         <div class="text-center p-4 bg-success text-white" >
           © 2021 Copyright:
-          <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+          <a class="text-reset fw-bold" href="https://mdbootstrap.com/">Abdelkader Ould Hennia</a>
         </div>
       </footer>
       
